--- a/Samples/Stars/Stars-Info.plist
+++ b/Samples/Stars/Stars-Info.plist
@@ -46,5 +46,7 @@
 	</array>
   <key>UIRequiresFullScreen</key>
 	<true/>
+  <key>NSCameraUsageDescription</key>
+	<string>Used to scan QR codes</string>
 </dict>
 </plist>
