--- a/Samples/VideoWidgetDemo/Info.plist
+++ b/Samples/VideoWidgetDemo/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+  <key>NSCameraUsageDescription</key>
+	<string>Used to scan QR codes</string>
 </dict>
 </plist>
