--- a/Samples/TreasureHuntNDK/TreasureHuntNDK-Info.plist
+++ b/Samples/TreasureHuntNDK/TreasureHuntNDK-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.google.${BUNDLE_FRAGMENT_NAME:rfc1034identifier}</string>
+	<string>com.google.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
